# User-service-matcher

./: CHANGELOG.md  CS30 Project proposal - Drew McGregor.md  Development work.md  main.py  pyproject.toml  service.py  service_objects.py  services.py  user.py  user_objects.py
Services/: Apple.py  Apple.txt  Costco.txt  Safeway.txt  Windows.txt  superstore.py
Users/: bob.py  jill.txt  tera.txt
