[tool.poetry]
name = "repl-nix-user-service-matcher"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_user_service_matcher"}]

[tool.poetry.dependencies]
python = "^3.10"
tabulate = "^0.9.0"
services = "^0.1.1"
django-email-users = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
